# approval-system-popon

./: .gitignore  Makefile  README.md  SPECIFICATION.md  pyproject.toml  requirements.txt  requirements309.txt  uwsgi.ini
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
approvals/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
approvals/management/commands/: send_approval_reminders.py
approvals/models/: __init__.py  base.py  types.py
approvals/tests/: test_commands.py  test_copy_view.py  test_forms.py  test_views.py
config/: settings.py  urls.py
contrib/: generate_secretkey.py
core/: admin.py  context_processors.py  models.py  tests.py  views.py
core/management/commands/: setup_test_data.py
docs/: SPECIFICATION.md  TEST_SPECIFICATION.md  add_new_approval.md
notification/: admin.py  models.py  tests.py  urls.py  views.py
portal/: forms.py  tests.py  urls.py  views.py
static/js/: common.js  portal_dashboard.js  request_form.js
templates/: base.html
templates/accounts/: error.html  login.html  login_sent.html
templates/approvals/: request_detail.html  request_form.html
templates/approvals/partials/: detail_default.html  detail_localbusinesstriprequest.html  detail_simplerequest.html
templates/emails/: approval_reminder.txt  approval_request.txt  approved.txt  proxy_remanded.txt  rejected.txt  remanded.txt  resubmitted.txt  withdrawn.txt
templates/notification/: detail.html
templates/portal/: index.html
templates/portal/partials/: notification_list.html  request_list.html
